content/browser/browser_thread_impl.h
@@ -6,6 +6,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #ifndef CONTENT_BROWSER_BROWSER_THREAD_IMPL_H_
 #define CONTENT_BROWSER_BROWSER_THREAD_IMPL_H_
 
+#include "base/threading/platform_thread.h"
 #include "base/threading/thread.h"
 #include "content/common/content_export.h"
 #include "content/public/browser/browser_thread.h"
@@ -26,7 +27,9 @@ class CONTENT_EXPORT BrowserThreadImpl : public BrowserThread,
                     base::MessageLoop* message_loop);
   ~BrowserThreadImpl() override;
 
+  bool Start();
   bool StartWithOptions(const Options& options);
+  bool StartAndWaitForTesting();
 
   static void ShutdownThreadPool();
 
