chrome/browser/policy/cloud/component_cloud_policy_browsertest.cc
@@ -138,6 +138,11 @@ class ComponentCloudPolicyTest : public ExtensionBrowserTest {
     ExtensionBrowserTest::SetUpOnMainThread();
   }
 
+  void TearDownOnMainThread() override {
+    event_listener_.reset();
+    ExtensionBrowserTest::TearDownOnMainThread();
+  }
+
   scoped_refptr<const extensions::Extension> LoadExtension(
       const base::FilePath::CharType* path) {
     base::FilePath full_path;
@@ -256,6 +261,9 @@ IN_PROC_BROWSER_TEST_F(ComponentCloudPolicyTest, UpdateExtensionPolicy) {
 }
 
 IN_PROC_BROWSER_TEST_F(ComponentCloudPolicyTest, InstallNewExtension) {
+  event_listener_->Reply(std::string());
+  event_listener_.reset();
+
   EXPECT_TRUE(test_server_.UpdatePolicyData(
       dm_protocol::kChromeExtensionPolicyType, kTestExtension2, kTestPolicy2));
   // Installing a new extension doesn't trigger another policy fetch because
